--- a/RDIP/Codes/HTML/index.html
+++ b/RDIP/Codes/HTML/index.html
@@ -3,6 +3,7 @@
         <title>Virtual labs</title>
         <link href="../CSS/style.css" rel="stylesheet">
         <script src="../JS/script.js"></script>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     </head>
     <body>
         <p>Experiment</p>
@@ -14,6 +15,10 @@
        
       <p id="intro"></p>
       <p id="button-select"></p>
+
+      <div id="jumbled-buttons">
+
+      </div>
         
     </body>
 </html>
