Goal 4 functionalities related to word selection

--- a/RDIP/Codes/HTML/index.html
+++ b/RDIP/Codes/HTML/index.html
@@ -19,6 +19,9 @@
       <div id="jumbled-buttons">
 
       </div>
+      <p id="formed-sentence"></p>
+      <p id="selectedWo"></p>
+      <div id="reformButton">
         
     </body>
 </html>
