Goal 6 functionality of reform sentence button

--- a/RDIP/Codes/HTML/index.html
+++ b/RDIP/Codes/HTML/index.html
@@ -21,7 +21,7 @@
       </div>
       <p id="formed-sentence"></p>
       <p id="selectedWo"></p>
-      <div id="reformButton">
+      <div id="reformbutton">
         
     </body>
 </html>
