Goal 7 Combining the words chosen into a sentence

--- a/RDIP/Codes/HTML/index.html
+++ b/RDIP/Codes/HTML/index.html
@@ -21,7 +21,8 @@
       </div>
       <p id="formed-sentence"></p>
       <p id="selectedWo"></p>
-      <div id="reformbutton">
+      <div id="reformbutton"></div><br>
+       <div id="check"></div>
         
     </body>
 </html>
