Goal 8 functionality of check correctness of sentence button

--- a/RDIP/Codes/HTML/index.html
+++ b/RDIP/Codes/HTML/index.html
@@ -9,8 +9,8 @@
         <p>Experiment</p>
         <select id="select-lang" onchange="select();">
             <option value="def" >---Select Language---</option>
-            <option value="english" >English</option>
-            <option value="hindi">Hindi</option>
+            <option value="english" id="english" >English</option>
+            <option value="hindi" id="hindi">Hindi</option>
       </select>
        
       <p id="intro"></p>
@@ -23,6 +23,8 @@
       <p id="selectedWo"></p>
       <div id="reformbutton"></div><br>
        <div id="check"></div>
+       <p id="right"></p><br>
+       <p id="wrong"></p>
         
     </body>
 </html>
