Goal 9 added Get correct sentence button if sentence is wrong

--- a/RDIP/Codes/HTML/index.html
+++ b/RDIP/Codes/HTML/index.html
@@ -25,6 +25,7 @@
        <div id="check"></div>
        <p id="right"></p><br>
        <p id="wrong"></p>
+       <div id="answers"></div>
         
     </body>
 </html>
