Goal 10 functionality of get correct sentence button

--- a/RDIP/Codes/HTML/index.html
+++ b/RDIP/Codes/HTML/index.html
@@ -26,6 +26,6 @@
        <p id="right"></p><br>
        <p id="wrong"></p>
        <div id="answers"></div>
-        
+       <p id="result"></p>
     </body>
 </html>
