--- a/RDIP/Codes/HTML/index.html
+++ b/RDIP/Codes/HTML/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     </head>
     <body>
-        <p>Experiment</p>
+        <p id="he">Experiment: Forming Sentences-2</p>
         <select id="select-lang" onchange="select();">
             <option value="def" >---Select Language---</option>
             <option value="english" id="english" >English</option>
