Goal 5 Functionalities related to tokens and types

--- a/RDIP_1/Codes/HTML/index.html
+++ b/RDIP_1/Codes/HTML/index.html
@@ -21,15 +21,17 @@
         <table border="border">
          <tr>
              <td id="txt">#tokens:</td>
-             <td><input type="text" id="field"></td>
+             <td><input type="text" id="wfield"></td>
          </tr>
          <tr>
              <td id="txt">#types:</td>
-             <td><input type="text" id="field"></td>
+             <td><input type="text" id="tfield"></td>
          </tr>
           
         </table>
         </div>
+       <div id="btn"></div>
+       <p id="resultmsg"></p>
         </div>
         
     </body>
