--- a/RDIP_1/Codes/HTML/index.html
+++ b/RDIP_1/Codes/HTML/index.html
@@ -4,7 +4,8 @@
         <title>Experiment-2</title>
       <link rel="stylesheet" href="../CSS/style.css">
       <script src="../JS/script.js"></script>
-      <script src="../Libraries/node_modules/snowball/stemmer/lib/Snowball.min.js"></script>
+      <script src="../../Libraries/require.js"></script>
+     <script src="../../Libraries/node_modules/snowball/stemmer/lib/Snowball.min.js"></script>
     </head>
     <body>
         <p id="he">Tokens and types</p>
