Goal 10 Functionality related to comparison

--- a/RDIP_1/Codes/HTML/index.html
+++ b/RDIP_1/Codes/HTML/index.html
@@ -39,6 +39,7 @@
        <div id="rootmsg"></div>
        <p id="resultmsg"></p>
        <div id="final"></div>
+       <div id="result"></div>
       
        <div id="continue"></div>
        
